filemanager tips z-index for TinyMCE fixed. Content component updated.

--- a/Uthando-CSS/admin/Additions.css
+++ b/Uthando-CSS/admin/Additions.css
@@ -1,6 +1,6 @@
 /* TIPS */
 .tip-filebrowser {
-	z-index: 1201;
+	z-index: 400011;
 }
 .tip-filebrowser .tip {
 	background: #000;
